--- a/Easy Trade.html
+++ b/Easy Trade.html
@@ -186,7 +186,7 @@
 
 
 
-           <a href="https://farsfilter.github.io/FarsFilter/BUY.html"><button class="buy-1">ثبت نام دوره</button></a>
+           <a href="https://github.com/EasyTrade2/easytrade/blob/main/wallet.html"><button class="buy-1">ثبت نام دوره</button></a>
 
 
 
@@ -228,8 +228,6 @@
 
 
 
-           
-
 
 
            <div style="background-color: blueviolet" class="content">
@@ -256,7 +254,7 @@
 
 
 
-           <button class="buy-3">ثبت نام دوره</button>       
+           <a href="https://github.com/EasyTrade2/easytrade/blob/main/wallet.html"><button class="buy-3">ثبت نام دوره</button></a>       
 
 
 
@@ -292,7 +290,7 @@
 
 
 
-           <button class="buy-4">ثبت نام دوره</button>       
+           <a href="https://github.com/EasyTrade2/easytrade/blob/main/wallet.html"><button class="buy-4">ثبت نام دوره</button></a>       
 
 
 
