--- a/Easy Trade.html
+++ b/Easy Trade.html
@@ -154,7 +154,7 @@
 
 
 
-          <a href="https://farsfilter.github.io/FarsFilter/BUY.html">
+          <a href="https://easytrade2.github.io/easytrade/wallet.html">
 
 
 
@@ -186,7 +186,7 @@
 
 
 
-           <a href="https://github.com/EasyTrade2/easytrade/blob/main/wallet.html"><button class="buy-1">ثبت نام دوره</button></a>
+           <a href="https://easytrade2.github.io/easytrade/wallet.html"><button class="buy-1">ثبت نام دوره</button></a>
 
 
 
@@ -254,7 +254,7 @@
 
 
 
-           <a href="https://github.com/EasyTrade2/easytrade/blob/main/wallet.html"><button class="buy-3">ثبت نام دوره</button></a>       
+           <a href="https://easytrade2.github.io/easytrade/wallet.html"><button class="buy-3">ثبت نام دوره</button></a>       
 
 
 
@@ -290,7 +290,7 @@
 
 
 
-           <a href="https://github.com/EasyTrade2/easytrade/blob/main/wallet.html"><button class="buy-4">ثبت نام دوره</button></a>       
+           <a href="https://easytrade2.github.io/easytrade/wallet.html"><button class="buy-4">ثبت نام دوره</button></a>       
 
 
 
