--- a/Easy Trade.html
+++ b/Easy Trade.html
@@ -220,7 +220,7 @@
 
 
 
-           <button class="buy-2">ثبت نام دوره</button>
+           <a href="https://easytrade2.github.io/easytrade/wallet.html"><button class="buy-2">ثبت نام دوره</button></a>
 
 
 
