--- a/Easy Trade.html
+++ b/Easy Trade.html
@@ -38,7 +38,7 @@
 
        <title>دوره های ترید و تحلیل </title>
 
-<link rel="icon" href="https://play-lh.googleusercontent.com/n4SGm46G5xC9j0IlQpcS4Xsct5lzMRv-vk65lfO9imY1pue2t2vWqHhIphRy5Jggdw" />
+<link rel="icon" href="https://s6.uupload.ir/files/unnamed_tg0y.png" />
 
        
 
